--- a/app/src/main/res/drawable-v24/item_background.xml
+++ b/app/src/main/res/drawable-v24/item_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="2dp" android:color="#ffffff" />
-    <corners android:radius="12dp"/>
-    <solid android:color="#D1D0CE" />
+    <corners android:radius="7dp"/>
+    <solid android:color="#d5d8dc" />
 </shape>
