--- a/app/src/main/res/layout/activity_pokemon_display.xml
+++ b/app/src/main/res/layout/activity_pokemon_display.xml
@@ -16,6 +16,8 @@
         android:layout_marginEnd="5dp"
 
         android:background="@drawable/item_background"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
